# EmbeddedCppDiploma

AUTOSAR/: AutoSAR_Slides.rar
AUTOSAR/Slides/: AUTOMOTIVE_BUS.pptx  AUTOSAR.pptx  AutoSar_Lec1.pptx  MemoryStack.pptx  RTE.pptx  comstack.pptx  diagnostics.pptx
AUTOSAR/docs/: erika_tool.txt
DevOps/: DevOps.pptx  dockers containers.pptx
RTOS/FreeRTOS_Porting/: .cproject  .project  FreeRTOS_Porting Debug.launch  FreeRTOS_Porting.ioc
RTOS/FreeRTOS_Porting/Debug/: FreeRTOS_Porting.elf  FreeRTOS_Porting.list  FreeRTOS_Porting.map  makefile
RTOS/FreeRTOS_Semaphore/: .cproject  .project  FreeRTOS_Semaphore.ioc
RTOS/FreeRTOS_Semaphore/Debug/: FreeRTOS_Semaphore.elf  FreeRTOS_Semaphore.list  FreeRTOS_Semaphore.map  makefile  objects.list
RTOS/RTOS Slides/: 3_Real_Time_Operating_System_FreeRTOS_Kernel.pptx  4_Real_Time_Operating_System_FreeRTOS_Kernel_part_2.pptx
RTOS/RTOS_TEST/: .cproject  .project  RTOS_TEST Debug.launch  RTOS_TEST.ioc
RTOS/RTOS_TEST/Debug/: RTOS_TEST.elf  RTOS_TEST.hex  RTOS_TEST.list  RTOS_TEST.map  makefile  objects.list
RTOS/RTOS_TEST_G3/: .cproject  RTOS_TEST_G3.ioc
RTOS/RTOS_TEST_G3/Debug/: RTOS_TEST_G3.elf  RTOS_TEST_G3.list  RTOS_TEST_G3.map  makefile  objects.list
buildTools/: Date.cpp  Date.h  Makefile  Makefiles.ppt  Makefiles.pptx  makefile2.mk  makefile3.mk  testDate.cpp
cpp/G4/: area.cpp  calculator.cpp  name.cpp  problem1.cpp
cpp/G4/Session_4/: crash.cpp  flush_newline.cpp
cpp/G8/: fixed_example.cpp  hello.cpp
cpp/G8/array/: CMakeLists.txt  array_ref.cpp  commonFuncions.cpp  commonFuncions.hpp
cpp/labs/: Inheritance_basic.cpp  appEmployee.cpp  arrays.cpp  assignment.cpp  calculator.cpp  calculatorLab.cpp  callback_lambda.cpp  casting.cpp  cbk_lambda.cpp  class.cpp  complex.cpp  composite.cpp  composite2.cpp  employee.h  inharetance_basic.cpp  inheritance.cpp  lab_lambda.cpp  lambda.cpp  lambda2.cpp  max_templates.cpp  polygon.cpp  problem_G3.cpp  shapeG3.cpp  strings_lab.cpp  struct.cpp  vector.cpp
cpp/slides/: DesignPatterns.ppt  designPatterns_Part2.ppt
interfacing/RobotController_LLVL/: Joystick.axf  Joystick.htm  Joystick.uvproj  Joystick_Target 1.dep
interfacing/Slides/: ADC LAB01.pptx  ADC.pptx  GPIO.pptx  GettingStarted.pptx  I2C_STM32_LAB.pptx  Interrupts.pptx  TIMERS.pptx  UART.pptx  symbols.ppt
interfacing/stm32-workspace/: STM32F10x_StdPeriph_Lib_V3.5.0.7z
swe/: swe.pptx
testing/: TDD.pptx
testing/unit_testing/Car_Engine/: CMakeLists.txt  car.cpp  car.h  car_test.cpp  engine_mock.cpp  engine_mock.h  i_engine.h  v7_engine.h  v8_engine.cpp  v8_engine.h
testing/unit_testing/queue/: CMakeLists.txt  queue.h  queue_test.cpp
(+785 files in other folders)
